WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145861
Meta refresh preference is not respected on fast path WebView initialization
https://bugs.webkit.org/show_bug.cgi?id=145861
Summary
Meta refresh preference is not respected on fast path WebView initialization
Jon Honeycutt
Reported
2015-06-10 16:22:49 PDT
The fast path WebView initialization in -[WebView initSimpleHTMLDocumentWithStyle:editable:withFrame:withPreferences:] does not respect the "meta refresh" preference. <
rdar://problem/21309911
>
Attachments
Patch
(1.67 KB, patch)
2015-06-10 16:28 PDT
,
Jon Honeycutt
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2015-06-10 16:28:16 PDT
Created
attachment 254688
[details]
Patch
Jon Honeycutt
Comment 2
2015-06-10 16:36:08 PDT
Committed
r185436
: <
http://trac.webkit.org/changeset/185436
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug