Meta refresh preference is not respected on fast path WebView initialization

<https://bugs.webkit.org/show_bug.cgi?id=145861>
<rdar://problem/21309911>

Reviewed by Brady Eidson.

* WebView/WebView.mm:
(-[WebView initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:]):
Set the WebCore setting from the WebPreferences preference.

Canonical link: https://commits.webkit.org/163906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185436 268f45cc-cd09-0410-ab3c-d52691b4dbfc