Source/WebKit/mac/WebView/WebView.mm
@@ -1234,6 +1234,9 @@ static void WebKitInitializeGamepadProviderIfNecessary()
     // FIXME: this is a workaround for <rdar://problem/11820090> Quoted text changes in size when replying to certain email
     _private->page->settings().setMinimumFontSize([_private->preferences minimumFontSize]);
 
+    // This is a workaround for <rdar://problem/21309911>.
+    _private->page->settings().setMetaRefreshEnabled([_private->preferences metaRefreshEnabled]);
+
     _private->page->setGroupName(groupName);
 
 #if ENABLE(REMOTE_INSPECTOR)
